--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-:root {
-  --color: #004236;
-}
-
 /* --------PC-------- */
 @media (min-width: 1000px) {
   /* 헤더  */
@@ -53,7 +49,7 @@
     margin: 0 auto;
   }
   .visual h2 {
-    font-size: 100px;
+    font-size: 80px;
     font-family: "Abhaya Libre", serif;
     font-weight: 500;
     color: var(--color);
@@ -610,7 +606,7 @@
     margin: 0 auto;
   }
   .visual h2 {
-    font-size: 60px;
+    font-size: 50px;
     font-family: "Abhaya Libre", serif;
     font-weight: 500;
     text-align: center;
@@ -705,6 +701,7 @@
     width: 100%;
     padding: 50px 0px;
     color: var(--color);
+    overflow: hidden;
   }
   .con2 h3 {
     width: 650px;
@@ -2130,13 +2127,15 @@
     transition: 1.5s;
   }
   .con4 ul {
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
   }
 
   .con4 ul li {
-    width: calc(100% / 5 - 20px);
+    width: calc(100% / 5 - 10px);
     transition: 0.8s;
     transform: rotateY(90deg);
     opacity: 0;
@@ -2146,14 +2145,12 @@
     opacity: 1;
   }
   .con4 ul img {
-    /* width: 250px;
-    height: 250px; */
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
   .con4 ul p {
-    font-size: 12px;
+    font-size: 11px;
     text-align: center;
     margin-top: 10px;
     font-family: "Freesentation-9Black";
