--- a/css/product.css
+++ b/css/product.css
@@ -58,8 +58,11 @@
     margin: 0;
     position: absolute;
     top: 250px;
-    left: 45%;
-    transform: translateX(-45%);
+    left: 38%;
+    transform: translateX(-38%);
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 0.5s;
   }
 
   .title ul p {
@@ -72,6 +75,18 @@
     top: 350px;
     left: 35%;
     transform: translateX(-35%);
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 1s;
+  }
+
+  .title.on h2 {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  .title.on p {
+    transform: translateY(0);
+    opacity: 1;
   }
   .title ul li {
     width: calc(100% / 2);
@@ -105,6 +120,9 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: rotateY(90deg);
   }
 
   .con1 .con1_right {
@@ -116,15 +134,33 @@
     height: 250px;
     padding: 20px;
     box-sizing: border-box;
-    font-family: "Freesentation-9Black";
+    font-family: "Freesentation-7Bold";
+    opacity: 0;
+    transition: 2.5s;
+    overflow: hidden;
   }
   .con1 .con1_right img {
     width: 250px;
     height: 250px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: scale(1.5);
   }
 
+  .con1.on > ul > li:nth-child(1) img {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+  .con1.on .con1_right img {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  .con1.on .con1_right p {
+    opacity: 1;
+  }
   /* 흐르는 텍스트 */
 
   .marquee-container {
@@ -160,6 +196,7 @@
   .con2 {
     width: 100%;
     padding: 150px 0px;
+    overflow: hidden;
   }
 
   .con2 > ul {
@@ -178,6 +215,9 @@
     font-family: "Abhaya Libre", serif;
     font-weight: 600;
     margin-left: 450px;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1s;
   }
   .con2 > ul > li > p {
     width: 500px;
@@ -185,6 +225,9 @@
     font-family: "Freesentation-9Black";
     font-weight: 600;
     margin-left: 450px;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1.5s;
   }
   .con2 .con2_right {
     display: flex;
@@ -198,18 +241,26 @@
     line-height: 18px;
     transform: translateY(200px);
     font-family: "Freesentation-9Black";
+    opacity: 0;
+    transition: 2s;
   }
   .con2 .con2_right li:nth-child(1) img {
     width: 250px;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 2s;
+    transform: translateX(-100%);
   }
   .con2 .con2_right li:nth-child(2) img {
     width: 300px;
     height: 500px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: translateX(100%);
   }
 
   .con2 .con2_right li:nth-child(2) p {
@@ -219,8 +270,33 @@
     font-size: 20px;
     margin-top: 10px;
     color: var(--color);
+    opacity: 0;
+    transition: 2s;
   }
 
+  .con2.on > ul > li > h3 {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .con2.on > ul > li > p {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .con2.on .con2_right li:nth-child(1) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(2) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(1) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  .con2.on .con2_right li:nth-child(2) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
   /* con3 */
 
   .con3 {
@@ -380,20 +456,34 @@
     margin: 0;
     position: absolute;
     top: 250px;
-    left: 45%;
-    transform: translateX(-45%);
+    left: 24%;
+    transform: translateX(-24%);
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 0.5s;
   }
 
   .title ul p {
     width: 350px;
     font-family: "Freesentation-9Black";
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 15px;
+    line-height: 25px;
     margin: 0;
     position: absolute;
     top: 350px;
-    left: 35%;
-    transform: translateX(-35%);
+    left: 13%;
+    transform: translateX(-13%);
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 1s;
+  }
+  .title.on h2 {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  .title.on p {
+    transform: translateY(0);
+    opacity: 1;
   }
   .title ul li {
     width: calc(100% / 2);
@@ -410,7 +500,6 @@
   }
   .con1 > ul {
     width: 90%;
-
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -428,27 +517,49 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: rotateY(90deg);
   }
 
   .con1 .con1_right {
     display: flex;
   }
-
+  .con1 .con1_right li {
+    width: calc(100% / 2);
+  }
   .con1 .con1_right p {
-    width: 200px;
+    width: 100%;
     height: 200px;
     padding: 20px 0px;
     font-size: 12px;
     box-sizing: border-box;
-    font-family: "Freesentation-9Black";
+    font-family: "Freesentation-7Bold";
+    opacity: 0;
+    transition: 2.5s;
+    overflow: hidden;
   }
   .con1 .con1_right img {
-    width: 200px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: scale(1.5);
+  }
+  .con1.on > ul > li:nth-child(1) img {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+  .con1.on .con1_right img {
+    opacity: 1;
+    transform: scale(1);
   }
 
+  .con1.on .con1_right p {
+    opacity: 1;
+  }
   /* 흐르는 텍스트 */
 
   .marquee-container {
@@ -490,59 +601,63 @@
   .con2 > ul {
     width: 90%;
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
-  }
-
-  .con2 > ul > li {
-    width: calc(100% / 2);
-  }
-
-  .con2 > ul > li:nth-child(2) {
-    margin-right: 300px;
   }
 
   .con2 > ul > li > h3 {
-    width: 500px;
-
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Abhaya Libre", serif;
     font-weight: 600;
-    margin-left: 200px;
+    text-align: center;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1s;
   }
   .con2 > ul > li > p {
-    width: 500px;
-    font-size: 18px;
+    font-size: 15px;
+    text-align: center;
     font-family: "Freesentation-9Black";
     font-weight: 600;
-    margin-left: 200px;
-    /* margin-left: 450px; */
+
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1.5s;
   }
   .con2 .con2_right {
     width: 100%;
     display: flex;
+    justify-content: center;
     gap: 10px;
+    margin-top: 30px;
   }
 
   .con2 .con2_right li:nth-child(1) p {
-    width: 250px;
+    width: 100%;
     height: 300px;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 18px;
     transform: translateY(200px);
     font-family: "Freesentation-9Black";
+    opacity: 0;
+    transition: 2s;
   }
   .con2 .con2_right li:nth-child(1) img {
-    width: 250px;
+    width: 200px;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 2s;
+
+    transform: translateX(-100%);
   }
   .con2 .con2_right li:nth-child(2) img {
-    width: 300px;
+    width: 250px;
     height: 500px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: translateX(100%);
   }
 
   .con2 .con2_right li:nth-child(2) p {
@@ -552,8 +667,32 @@
     font-size: 20px;
     margin-top: 10px;
     color: var(--color);
+    opacity: 0;
+    transition: 2s;
+  }
+  .con2.on > ul > li > h3 {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .con2.on > ul > li > p {
+    opacity: 1;
+    transform: translateY(0);
   }
 
+  .con2.on .con2_right li:nth-child(1) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(2) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(1) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  .con2.on .con2_right li:nth-child(2) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
   /* con3 */
 
   .con3 {
@@ -710,12 +849,26 @@
     font-size: 50px;
     font-family: "Abhaya Libre", serif;
     font-weight: 700;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 0.5s;
+  }
+  .title.on h2 {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  .title.on p {
+    transform: translateY(0);
+    opacity: 1;
   }
   .title ul p {
     font-family: "Freesentation-9Black";
     text-align: center;
     font-size: 15px;
     line-height: 23px;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 1s;
   }
 
   .title img {
@@ -731,23 +884,27 @@
   }
   .con1 > ul {
     width: 80%;
-
     margin: 0 auto;
   }
 
   .con1 > ul > li:nth-child(1) {
-    width: 100%;
+    width: 80%;
     height: 100%;
-    margin-bottom: 10px;
+    margin: 0 auto 10px;
   }
   .con1 > ul > li:nth-child(2) {
-    width: 100%;
+    width: 80%;
     height: 100%;
+    margin: 0 auto 10px;
   }
   .con1 > ul > li:nth-child(1) img {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+
+    opacity: 0;
+    transition: 1.8s;
+    transform: rotateY(90deg);
   }
 
   .con1 .con1_right {
@@ -767,15 +924,33 @@
   .con1 .con1_right p {
     height: 150px;
     padding: 20px 0px;
-    font-size: 9px;
+    font-size: 14px;
     box-sizing: border-box;
-    font-family: "Freesentation-9Black";
+    font-family: "Freesentation-7Bold";
+    opacity: 0;
+    transition: 2.5s;
+    overflow: hidden;
   }
   .con1 .con1_right img {
     width: 100%;
     height: 150px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: scale(1.5);
+  }
+  .con1.on > ul > li:nth-child(1) img {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+  .con1.on .con1_right img {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  .con1.on .con1_right p {
+    opacity: 1;
   }
 
   /* 흐르는 텍스트 */
@@ -813,6 +988,7 @@
   .con2 {
     width: 100%;
     padding: 80px 0px;
+    overflow: hidden;
   }
 
   .con2 > ul {
@@ -826,6 +1002,9 @@
     text-align: center;
     font-family: "Abhaya Libre", serif;
     font-weight: 600;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1s;
   }
   .con2 > ul > li > p {
     text-align: center;
@@ -833,6 +1012,9 @@
     font-family: "Freesentation-9Black";
     font-weight: 600;
     margin-top: 10px;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1.5s;
   }
   .con2 .con2_right {
     width: 100%;
@@ -846,22 +1028,30 @@
 
   .con2 .con2_right li:nth-child(1) p {
     height: 150px;
-    font-size: 9px;
-    line-height: 12px;
-    transform: translateY(30px);
+    font-size: 13px;
+    line-height: 18px;
+    transform: translateY(60px);
     font-family: "Freesentation-9Black";
+    opacity: 0;
+    transition: 2.5s;
   }
   .con2 .con2_right li:nth-child(1) img {
     width: 90%;
     height: 150px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 2s;
+    transform: translateX(-100%);
   }
   .con2 .con2_right li:nth-child(2) img {
     width: 100%;
     height: 300px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: translateX(100%);
   }
 
   .con2 .con2_right li:nth-child(2) p {
@@ -869,10 +1059,35 @@
     font-weight: 700;
     text-align: center;
     font-size: 15px;
+
     margin-top: 10px;
     color: var(--color);
+    opacity: 0;
+    transition: 2s;
+  }
+  .con2.on > ul > li > h3 {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .con2.on > ul > li > p {
+    opacity: 1;
+    transform: translateY(0);
   }
 
+  .con2.on .con2_right li:nth-child(1) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(2) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(1) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  .con2.on .con2_right li:nth-child(2) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
   /* con3 */
 
   .con3 {
@@ -1023,14 +1238,27 @@
     font-size: 50px;
     font-family: "Abhaya Libre", serif;
     font-weight: 700;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 0.5s;
   }
   .title ul p {
     font-family: "Freesentation-9Black";
     text-align: center;
     font-size: 15px;
     line-height: 23px;
+    transform: translateY(50px);
+    opacity: 0;
+    transition: 1s;
   }
-
+  .title.on h2 {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  .title.on p {
+    transform: translateY(0);
+    opacity: 1;
+  }
   .title img {
     width: 100%;
     height: 200px;
@@ -1044,23 +1272,26 @@
   }
   .con1 > ul {
     width: 80%;
-
     margin: 0 auto;
   }
 
   .con1 > ul > li:nth-child(1) {
-    width: 100%;
+    width: 80%;
     height: 100%;
-    margin-bottom: 10px;
+    margin: 0 auto 10px;
   }
   .con1 > ul > li:nth-child(2) {
-    width: 100%;
+    width: 80%;
     height: 100%;
+    margin: 0 auto 10px;
   }
   .con1 > ul > li:nth-child(1) img {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: rotateY(90deg);
   }
 
   .con1 .con1_right {
@@ -1079,25 +1310,42 @@
   }
   .con1 .con1_right p {
     height: 150px;
-    padding: 20px 0px;
+    padding: 20px 10px;
     font-size: 9px;
     box-sizing: border-box;
-    font-family: "Freesentation-9Black";
+    font-family: "Freesentation-7Bold";
+    opacity: 0;
+    transition: 2.5s;
+    overflow: hidden;
   }
   .con1 .con1_right img {
     width: 100%;
     height: 150px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: scale(1.5);
+  }
+  .con1.on > ul > li:nth-child(1) img {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+  .con1.on .con1_right img {
+    opacity: 1;
+    transform: scale(1);
   }
 
+  .con1.on .con1_right p {
+    opacity: 1;
+  }
   /* 흐르는 텍스트 */
 
   .marquee-container {
     width: 100%;
     overflow: hidden;
     color: #eee;
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 900;
     font-family: "Abhaya Libre", serif;
     margin-bottom: 50px;
@@ -1126,6 +1374,7 @@
   .con2 {
     width: 100%;
     padding: 80px 0px;
+    overflow: hidden;
   }
 
   .con2 > ul {
@@ -1135,17 +1384,22 @@
 
   .con2 > ul > li > h3 {
     font-size: 30px;
-
     text-align: center;
     font-family: "Abhaya Libre", serif;
     font-weight: 600;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1s;
   }
   .con2 > ul > li > p {
     text-align: center;
-    font-size: 15px;
+    font-size: 13px;
     font-family: "Freesentation-9Black";
     font-weight: 600;
     margin-top: 10px;
+    opacity: 0;
+    transform: translateY(100px);
+    transition: 1.5s;
   }
   .con2 .con2_right {
     width: 100%;
@@ -1161,20 +1415,28 @@
     height: 150px;
     font-size: 9px;
     line-height: 12px;
-    transform: translateY(30px);
+    transform: translateY(80px);
     font-family: "Freesentation-9Black";
+    opacity: 0;
+    transition: 2s;
   }
   .con2 .con2_right li:nth-child(1) img {
     width: 90%;
     height: 150px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 2s;
+    transform: translateX(-100%);
   }
   .con2 .con2_right li:nth-child(2) img {
     width: 100%;
     height: 300px;
     object-fit: cover;
     border-radius: 5px;
+    opacity: 0;
+    transition: 1.8s;
+    transform: translateX(100%);
   }
 
   .con2 .con2_right li:nth-child(2) p {
@@ -1184,8 +1446,32 @@
     font-size: 15px;
     margin-top: 10px;
     color: var(--color);
+    opacity: 0;
+    transition: 2s;
+  }
+  .con2.on > ul > li > h3 {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .con2.on > ul > li > p {
+    opacity: 1;
+    transform: translateY(0);
   }
 
+  .con2.on .con2_right li:nth-child(1) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(2) p {
+    opacity: 1;
+  }
+  .con2.on .con2_right li:nth-child(1) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  .con2.on .con2_right li:nth-child(2) img {
+    opacity: 1;
+    transform: translateX(0%);
+  }
   /* con3 */
 
   .con3 {
